SB | Fix alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -706,3 +706,23 @@ header {
     }
   }
 }
+.cf-div {
+  margin: auto;
+  width: 60%;
+}
+
+.cf-div p {
+    margin-top: 0.8rem;
+}
+
+@media screen and (max-width: 767px) {
+
+  .cf-div {
+    margin: auto;
+    width: 100%;
+  }
+  
+  .cf-div p {
+      margin-top: 0rem;
+  }
+}
